WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31978
Chrome::contentsSizeChanged() is called when the content size has not changed
https://bugs.webkit.org/show_bug.cgi?id=31978
Summary
Chrome::contentsSizeChanged() is called when the content size has not changed
Benjamin Poulain
Reported
2009-11-30 01:38:36 PST
Chrome::contentsSizeChanged() is called systematically when FrameView::setContentsSize() is called. This means this functions is also called when the size has not changed. The view itself ignores the change since ScrollView::setContentsSize() check if the size if different: if (contentsSize() == newSize) return; [...] FrameView::setContentsSize() does not do such check and Chrome::contentsSizeChanged() is always called.
Attachments
Add a condition to skip the update
(1.08 KB, patch)
2009-11-30 01:41 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2009-11-30 01:41:13 PST
Created
attachment 44012
[details]
Add a condition to skip the update
WebKit Commit Bot
Comment 2
2009-11-30 08:56:37 PST
Comment on
attachment 44012
[details]
Add a condition to skip the update Clearing flags on attachment: 44012 Committed
r51492
: <
http://trac.webkit.org/changeset/51492
>
WebKit Commit Bot
Comment 3
2009-11-30 08:56:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug