2009-11-30  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Chrome::contentsSizeChanged() is called when the content size has not changed
        https://bugs.webkit.org/show_bug.cgi?id=31978

        Do not trigger contentsSizeChaned() is the new size is the same as the old one.

        * page/FrameView.cpp:
        (WebCore::FrameView::setContentsSize):

Canonical link: https://commits.webkit.org/42920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51492 268f45cc-cd09-0410-ab3c-d52691b4dbfc